# computer-vision-models-cpp-py

./: .gitignore  CMakeLists.txt  Pipfile  README.md  setup.py
models/vgg/: model.py
src_cpp/models/: resnet.cpp  vgg.cpp
src_py/models/resnet/: __init__.py  model.py
src_py/models/vgg/: __init__.py  model.py
src_py/models/yolo/: __init__.py  data.py  loss.py  model.py  train.py  utils.py
src_py/tests/: test_resnet.py  test_vgg.py
